# chat-web

./: .gitignore  Dockerfile  README.md  config.yml.example  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker-build-manually.yaml  docker-build-release.yaml
src/crynux_chat/: api.py  config.py  error.py  log.py  main.py
src/crynux_chat/models/: __init__.py  args.py  status.py
